Fix JavaScript syntax error - escape newlines in textarea placeholder

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1212,11 +1212,7 @@
                     
                     <div class="form-group">
                         <label class="form-label">Objects to Detect (one per line)</label>
-                        <textarea id="objectLabels" class="form-input" rows="8" placeholder="hedgehog
-fox
-cat
-dog">${objectLabels.join('
-')}</textarea>
+                        <textarea id="objectLabels" class="form-input" rows="8" placeholder="hedgehog&#10;fox&#10;cat&#10;dog">${objectLabels.join('\n')}</textarea>
                         <p style="font-size: 0.875rem; color: var(--text-secondary); margin-top: 0.5rem;">
                             Common options: hedgehog, fox, cat, dog, squirrel, bird, crow, robin, person, car, bicycle
                         </p>
