Add Species Training tab to main dashboard navigation

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -933,6 +933,7 @@
             <button class="tab" onclick="switchTab('metrics')">📊 Metrics</button>
             <button class="tab" onclick="switchTab('videos')">🎥 Videos</button>
             <button class="tab" onclick="switchTab('review')">🏷️ Review & Label</button>
+            <button class="tab" onclick="window.location.href='/species.html'">🦔 Species Training</button>
             <button class="tab" onclick="switchTab('ring')">🔔 Ring Setup</button>
             <button class="tab" onclick="switchTab('faces')">👤 Face Training</button>
             <button class="tab" onclick="switchTab('config')">⚙️ Configuration</button>
