--- a/src/static/species.html
+++ b/src/static/species.html
@@ -450,16 +450,16 @@
         }
 
         .tree-node {
-            margin: 0.5rem 0;
+            margin: 0.25rem 0;
         }
 
         .tree-node-content {
             display: flex;
             align-items: center;
             gap: 0.5rem;
-            padding: 0.75rem;
+            padding: 0.5rem 0.75rem;
             border: 1px solid var(--border-color);
-            border-radius: 8px;
+            border-radius: 6px;
             background: var(--bg-card);
             cursor: pointer;
             transition: all 0.2s;
@@ -492,18 +492,19 @@
         }
 
         .tree-icon {
-            font-size: 1.25rem;
+            font-size: 1.1rem;
         }
 
         .tree-info {
             flex: 1;
             display: flex;
             flex-direction: column;
-            gap: 0.25rem;
+            gap: 0.15rem;
         }
 
         .tree-name {
             font-weight: 500;
+            font-size: 0.9rem;
             color: var(--text-primary);
         }
 
@@ -514,19 +515,19 @@
 
         .tree-stats {
             display: flex;
-            gap: 1rem;
-            font-size: 0.75rem;
+            gap: 0.75rem;
+            font-size: 0.7rem;
             color: var(--text-secondary);
         }
 
         .tree-actions {
             display: flex;
-            gap: 0.5rem;
+            gap: 0.4rem;
         }
 
         .tree-actions button {
-            padding: 0.25rem 0.75rem;
-            font-size: 0.75rem;
+            padding: 0.2rem 0.6rem;
+            font-size: 0.7rem;
         }
 
         .tree-children {
@@ -749,7 +750,7 @@
                             <button class="btn btn-success" onclick="openAddChildModal('${node.id}', event)">+ Add Child</button>
                             ${!isYolo ? `<button class="btn" onclick="openUploadModalForNode('${node.id}', event)">📤 Upload</button>` : ''}
                             ${!isYolo && node.metadata?.training_images >= 10 ? `<button class="btn" onclick="trainNode('${node.id}', event)">🎓 Train</button>` : ''}
-                            ${!isYolo ? `<button class="btn btn-danger" onclick="deleteNode('${node.id}', event)" style="padding: 0.25rem 0.5rem;">✕</button>` : ''}
+                            ${!isYolo ? `<button class="btn btn-danger" onclick="deleteNode('${node.id}', event)" title="Delete this node">✕</button>` : ''}
                         </div>
                     </div>
             `;
