Update Discovery Mode button labels: Track This -> Enable, add tooltips

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1160,8 +1160,8 @@
                 </div>
                 <p style="color: var(--text-secondary); margin-bottom: 1rem;">
                     Discovery Mode found these objects in your videos. Choose what to do with each:
-                    <br><strong>✓ Track This</strong> = Add to your tracking list
-                    <br><strong>✗ Not Interested</strong> = Blacklist (AI is correct, but you don't care)
+                    <br><strong>✓ Enable</strong> = Add to Species Training page and start tracking
+                    <br><strong>✗ Blacklist</strong> = Stop suggesting this (AI is correct, but you don't care)
                     <br><strong>❌ Wrong Label</strong> = AI misidentified this object
                 </p>
                 <div class="filter-controls" id="discoveryFilters" style="display: none;">
@@ -3064,18 +3064,18 @@
                 html += `
                     </div>
                     <div class="label-controls" style="margin-top: 0.75rem; margin-bottom: 1rem; padding-top: 0.75rem; border-top: 1px solid var(--border-color);">
-                        <button class="btn btn-small" onclick="trackSingleDiscovery('${discovery.label}')" style="background: var(--success-color);" title="Add '${discovery.label}' to tracking list">✓ Track This</button>
-                        <button class="btn btn-small" onclick="blacklistSingleDiscovery('${discovery.label}')" style="background: var(--warning-color); color: white;" title="Blacklist '${discovery.label}'">✗ Blacklist</button>
-                        <button class="btn btn-small" onclick="relabelSingleDiscovery('${discovery.label}')" style="background: var(--danger-color);" title="Correct the label for '${discovery.label}'">🏷 Relabel</button>
+                        <button class="btn btn-small" onclick="trackSingleDiscovery('${discovery.label}')" style="background: var(--success-color);" title="Add '${discovery.label}' to Species Training page and enable tracking">✓ Enable</button>
+                        <button class="btn btn-small" onclick="blacklistSingleDiscovery('${discovery.label}')" style="background: var(--warning-color); color: white;" title="Stop Discovery Mode from suggesting '${discovery.label}' (adds to blacklist)">✗ Blacklist</button>
+                        <button class="btn btn-small" onclick="relabelSingleDiscovery('${discovery.label}')" style="background: var(--danger-color);" title="AI misidentified this - correct the label for '${discovery.label}'">🏷 Relabel</button>
                     </div>
                 `;
             }
             
             html += `
                 <div class="label-controls" style="margin-top: 1.5rem;">
-                    <button class="btn" onclick="approveDiscoveries()" style="background: var(--success-color);">✓ Track This Object</button>
-                    <button class="btn" onclick="ignoreDiscoveries()" style="background: var(--warning-color); color: white;">✗ Not Interested (Blacklist)</button>
-                    <button class="btn" onclick="relabelDiscoveries()" style="background: var(--danger-color);">❌ Wrong Label - Let Me Fix It</button>
+                    <button class="btn" onclick="approveDiscoveries()" style="background: var(--success-color);" title="Add selected objects to Species Training page and enable tracking">✓ Enable Selected</button>
+                    <button class="btn" onclick="ignoreDiscoveries()" style="background: var(--warning-color); color: white;" title="Stop Discovery Mode from suggesting these objects (adds to blacklist)">✗ Blacklist Selected</button>
+                    <button class="btn" onclick="relabelDiscoveries()" style="background: var(--danger-color);" title="AI misidentified - correct the label">❌ Relabel Selected</button>
                 </div>
             `;
             
