Add path to node metadata for correct training directory lookup

--- a/src/static/species.html
+++ b/src/static/species.html
@@ -903,8 +903,8 @@
         }
 
         function getNodePath(node) {
-            // This should be provided by the API but we'll construct it
-            return node.path || [node.name];
+            // Use path from metadata (provided by backend)
+            return node.metadata?.path || node.path || [node.name];
         }
 
         function toggleMultiSelect() {
