Update branding with icon and v0.1.0 release info

--- a/src/static/species.html
+++ b/src/static/species.html
@@ -574,7 +574,10 @@
 <body>
     <header>
         <div class="header-content">
-            <div class="logo">🦔 CritterCatcherAI - Species Training</div>
+            <div class="logo">
+                <img src="/static/android-chrome-192x192.png" alt="CritterCatcherAI Logo" style="width: 40px; height: 40px; border-radius: 6px; margin-right: 0.5rem;">
+                CritterCatcherAI - Species Training
+            </div>
             <div class="nav-links">
                 <a href="/">Dashboard</a>
                 <a href="/species.html" style="background: var(--bg-secondary);">Species Training</a>
