Fix: Add missing uploadSpeciesName element to upload modal

--- a/src/static/species.html
+++ b/src/static/species.html
@@ -657,6 +657,9 @@
                 <h2 class="modal-title">Upload Training Images</h2>
                 <button class="close-btn" onclick="closeUploadModal()">&times;</button>
             </div>
+            <p style="margin-bottom: 1rem; color: var(--text-secondary);">
+                Uploading for: <strong><span id="uploadSpeciesName"></span></strong>
+            </p>
             
             <!-- Image Type Selector -->
             <div style="margin-bottom: 1rem; padding: 1rem; background: var(--bg-secondary); border-radius: 8px;">
