Fix relabel functionality and TaxonomyTree errors
Fixes:
1. Fixed 'TaxonomyTree' object has no attribute 'nodes' error
   - Changed from taxonomy_tree.nodes to taxonomy_tree.get_node() and taxonomy_tree.roots
   - Fixed non-existent add_yolo_root() method call

2. Fixed relabel to support both YOLO categories and subcategories
   - Now supports 'dog' or 'dog/jack_russell' format
   - Subcategories are added as child nodes in taxonomy tree
   - Directory structure uses base label only (e.g., 'dog' directory for both 'dog' and 'dog/jack_russell')
   - Metadata stores full label including subcategory

3. Updated frontend examples to use correct format
   - Changed from 'Dog/Golden Retriever' to 'dog/jack_russell'
   - Updated all relabel prompts with correct format guidance
   - Uses lowercase and underscores for consistency

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -2724,12 +2724,12 @@
             const newLabel = prompt(
                 `The AI thinks this is "${oldLabel}" but you disagree.\n\n` +
                 `What is the CORRECT label for these images?\n\n` +
-                `Format: Category or Category/Subcategory\n` +
+                `Format: category or category/subcategory\n` +
                 `Examples:\n` +
                 `  - hedgehog\n` +
-                `  - Hedgehog/European Hedgehog\n` +
+                `  - hedgehog/european_hedgehog\n` +
                 `  - fox\n` +
-                `  - Fox/Red Fox`,
+                `  - fox/red_fox`,
                 oldLabel
             );
             
@@ -3116,12 +3116,12 @@
             const newLabel = prompt(
                 `The AI thinks this is "${label}" but you disagree.\n\n` +
                 `What is the CORRECT label?\n\n` +
-                `Format: Category or Category/Subcategory\n` +
+                `Format: category or category/subcategory\n` +
                 `Examples:\n` +
                 `  - dog\n` +
-                `  - Dog/Golden Retriever\n` +
+                `  - dog/jack_russell\n` +
                 `  - cat\n` +
-                `  - Cat/Siamese`,
+                `  - cat/siamese`,
                 label
             );
             
@@ -3392,12 +3392,12 @@
             const newLabel = prompt(
                 `The AI thinks this is "${label}" but you disagree.\n\n` +
                 `What is the CORRECT label?\n\n` +
-                `Format: Category or Category/Subcategory\n` +
+                `Format: category or category/subcategory\n` +
                 `Examples:\n` +
                 `  - hedgehog\n` +
-                `  - Hedgehog/European Hedgehog\n` +
+                `  - hedgehog/european_hedgehog\n` +
                 `  - fox\n` +
-                `  - Fox/Red Fox`,
+                `  - fox/red_fox`,
                 label
             );
             if (newLabel === null || newLabel.trim() === '' || newLabel.trim().toLowerCase() === label) return;
