Phase 7: Add Model Management UI (models.html) and update navigation

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1103,6 +1103,7 @@
             <button class="tab" onclick="switchTab('videos')">🎥 Videos</button>
             <button class="tab" id="discoveryTab" onclick="switchTab('review')">🔍 Discovery Mode</button>
             <button class="tab" onclick="window.location.href='/species.html'">🦔 Species Training</button>
+            <button class="tab" onclick="window.location.href='/static/models.html'">🤖 Model Management</button>
             <button class="tab" onclick="switchTab('ring')">🔔 Ring Setup</button>
             <button class="tab" onclick="switchTab('faces')">👤 Face Training</button>
             <button class="tab" onclick="switchTab('config')">⚙️ Configuration</button>
