--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1102,7 +1102,7 @@
             <button class="tab" onclick="switchTab('storage')">💾 Storage</button>
             <button class="tab" onclick="switchTab('videos')">🎥 Videos</button>
             <button class="tab" id="discoveryTab" onclick="switchTab('review')">🔍 Discovery Mode</button>
-            <button class="tab" onclick="window.location.href='/species.html'">🦔 Species Training</button>
+            <button class="tab" onclick="window.location.href='/static/profiles.html'">🦔 Animal Profiles</button>
             <button class="tab" onclick="window.location.href='/static/models.html'">🤖 Model Management</button>
             <button class="tab" onclick="switchTab('ring')">🔔 Ring Setup</button>
             <button class="tab" onclick="switchTab('faces')">👤 Face Training</button>
