Add Review tab to main navigation

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1116,6 +1116,7 @@
             <button class="tab" onclick="switchTab('metrics')">📊 Metrics</button>
             <button class="tab" onclick="switchTab('storage')">💾 Storage</button>
             <button class="tab" onclick="switchTab('videos')">🎥 Videos</button>
+            <button class="tab" onclick="window.location.href='/static/review.html'">🔍 Review</button>
             <button class="tab" onclick="window.location.href='/static/profiles.html'">🦔 Animal Profiles</button>
             <button class="tab" onclick="window.location.href='/static/models.html'">🤖 Model Management</button>
             <button class="tab" onclick="switchTab('ring')">🔔 Ring Setup</button>
