--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1119,8 +1119,8 @@
             <button class="tab" onclick="window.location.href='/static/review.html'">🔍 Review</button>
             <button class="tab" onclick="window.location.href='/static/profiles.html'">🦔 Animal Profiles</button>
             <button class="tab" onclick="window.location.href='/static/models.html'">🤖 Model Management</button>
+            <button class="tab" onclick="window.location.href='/static/face_training.html'">👤 Face Training</button>
             <button class="tab" onclick="switchTab('ring')">🔔 Ring Setup</button>
-            <button class="tab" onclick="switchTab('faces')">👤 Face Training</button>
             <button class="tab" onclick="switchTab('config')">⚙️ Configuration</button>
             <button class="tab" onclick="switchTab('logs')">📋 Logs</button>
         </div>
